Add link to audio file

--- a/source/_posts/2016-02-21-inspec.markdown
+++ b/source/_posts/2016-02-21-inspec.markdown
@@ -28,7 +28,7 @@ Join us on [Tuesday, February 23 at 1300 UTC](http://everytimezone.com/#2015-2-2
 * [Picks](http://foodfightshow.org/2016/02/inspec.html#picks)
 * Download
   * [Video](http://www.youtube.com/embed/RraZsq6C42s)
-  * Audio - coming soon
+  * [Audio](http://traffic.libsyn.com/foodfight/foodfight-99-inspec.mp3)
 
 Panel<a name="panel"></a>
 -----
@@ -165,7 +165,7 @@ Picks<a name="picks"></a>
 Download
 --------
 * [Video](http://www.youtube.com/embed/RraZsq6C42s)
-* Audio - coming soon
+* [Audio](http://traffic.libsyn.com/foodfight/foodfight-99-inspec.mp3)
 
 <hr />
 
