--- a/source/_posts/2016-06-20-habitat.markdown
+++ b/source/_posts/2016-06-20-habitat.markdown
@@ -17,11 +17,10 @@ categories:
 
 <iframe width="420" height="315" src="http://www.youtube.com/embed/gDlpXijLH2Y" frameborder="0" allowfullscreen></iframe>
 
-Join us for a discussion about [Habitat](https://www.habitat.sh)a new approach to automation that focuses on the application instead of the infrastructure it runs on. With Habitat, the apps you build, deploy, and manage behave consistently in any runtime — metal, VMs, containers, and PaaS. You'll spend less time on the environment and more time building features.
+Join us for a discussion about [Habitat](https://www.habitat.sh) a new approach to automation that focuses on the application instead of the infrastructure it runs on. With Habitat, the apps you build, deploy, and manage behave consistently in any runtime — metal, VMs, containers, and PaaS. You'll spend less time on the environment and more time building features.
 
 * [Panel](http://foodfightshow.org/2016/06/habitat.html#panel)
 * [Outline](http://foodfightshow.org/2016/06/habitat.html#outline)
-* [Picks](http://foodfightshow.org/2016/06/habitat.html#picks)
 * Download
   * [Video](https://www.youtube.com/watch?v=gDlpXijLH2Y)
   * Audio - Coming soon!
@@ -41,21 +40,20 @@ Outline & Show Notes<a name="outline"></a>
 
 ###  Show Notes
 
-
-Picks<a name="picks"></a>
------
-
-### Adam
-
-### Nell
-
-### Jamie
-
-### Brandon
-
-### Mike
-
-### Nathen
+* Happy 100th Episode!
+* What is [Habitat](https://www.habitat.sh)?
+* Does Habitat do too much?
+* The Build System
+  * Why build a packaging system?
+  * Supervisors ans Artifacts
+* [Docker](https://www.docker.com/)
+* How all-or-nothing is Habitat?
+  * Progressive Reveal
+* [Chef](https://www.chef.io/)
+  * [Chef Delivery](https://www.chef.io/delivery/)
+* [Terraform](https://www.terraform.io/)
+* What's the plan with [Windows](https://www.microsoft.com/en-us/windows)?
+* Habitat Feedback
 
 Download
 --------
