Add link to audio file

--- a/source/_posts/2016-06-20-habitat.markdown
+++ b/source/_posts/2016-06-20-habitat.markdown
@@ -23,7 +23,7 @@ Join us for a discussion about [Habitat](https://www.habitat.sh) a new approach 
 * [Outline](http://foodfightshow.org/2016/06/habitat.html#outline)
 * Download
   * [Video](https://www.youtube.com/watch?v=gDlpXijLH2Y)
-  * Audio - Coming soon!
+  * [Audio](http://traffic.libsyn.com/foodfight/foodfight-100-habitat.mp3)
 
 Panel<a name="panel"></a>
 -----
@@ -60,7 +60,7 @@ Outline & Show Notes<a name="outline"></a>
 Download
 --------
 * [Video](https://www.youtube.com/watch?v=gDlpXijLH2Y)
-* Audio - Coming soon!
+* [Audio](http://traffic.libsyn.com/foodfight/foodfight-100-habitat.mp3)
 
 <hr />
 
