Shorten the home page with some 'read more' links
Signed-off-by: Nathen Harvey <nharvey@chef.io>

--- a/source/_posts/2016-02-21-inspec.markdown
+++ b/source/_posts/2016-02-21-inspec.markdown
@@ -30,6 +30,8 @@ Join us for a discussion about [InSpec](http://github.com/chef/inspec), the open
   * [Video](http://www.youtube.com/embed/RraZsq6C42s)
   * [Audio](http://traffic.libsyn.com/foodfight/foodfight-99-inspec.mp3)
 
+<!-- more -->
+
 Panel<a name="panel"></a>
 -----
 
