--- a/source/_posts/2017-01-04-new-year.markdown
+++ b/source/_posts/2017-01-04-new-year.markdown
@@ -18,7 +18,7 @@ Panel<a name="panel"></a>
 -----
 
 * Nell Shamrell-Harrington [github](https://github.com/nellshamrell), [twitter](https://twitter.com/nellshamrell), [blog](http://nellshamrell.com/)
-* Nathen Harvey [github](http://github.com/nathenharvey), [twitter](http://twitter.com/nathenharvey), irc: nathenharvey, [blog](http://nathenharvey.com)
+* Nathen Harvey [github](http://github.com/nathenharvey), [twitter](http://twitter.com/nathenharvey), [blog](http://nathenharvey.com)
 * Brandon Burton [github](http://github.com/solarce), [twitter](https://twitter.com/solarce)
 
 Outline & Show Notes<a name="outline"></a>
