--- a/source/_posts/2017-01-04-new-year.markdown
+++ b/source/_posts/2017-01-04-new-year.markdown
@@ -10,13 +10,13 @@ categories:
 
 # Watch Now!
 
-<iframe width="420" height="315" src="http://www.youtube.com/embed/CHgzEwoEml4" frameborder="0" allowfullscreen></iframe>
+<iframe width="420" height="315" src="http://www.youtube.com/embed/Llo-DKBRAs4" frameborder="0" allowfullscreen></iframe>
 
 * [Panel](http://foodfightshow.org/2017/01/new-year.html#panel)
 * [Outline](http://foodfightshow.org/2017/01/new-year.html#outline)
 * [Picks](http://foodfightshow.org/2017/01/new-year.html#picks)
 * Download
-  * [Video](http://youtu.be/CHgzEwoEml4)
+  * [Video](http://youtu.be/Llo-DKBRAs4)
   * Audio - Coming Soon!
 
 Panel<a name="panel"></a>
@@ -53,7 +53,7 @@ Picks<a name="picks"></a>
 
 Download
 --------
-* [Video](http://youtu.be/CHgzEwoEml4)
+* [Video](http://youtu.be/Llo-DKBRAs4)
 * Audio - Coming Soon!
 
 <hr />
