--- a/source/_posts/2017-01-04-new-year.markdown
+++ b/source/_posts/2017-01-04-new-year.markdown
@@ -17,7 +17,7 @@ categories:
 * [Picks](http://foodfightshow.org/2017/01/new-year.html#picks)
 * Download
   * [Video](http://youtu.be/Llo-DKBRAs4)
-  * Audio - Coming Soon!
+  * [Audio](http://traffic.libsyn.com/foodfight/FFS104.mp3)
 
 Panel<a name="panel"></a>
 -----
@@ -52,8 +52,8 @@ Outline & Show Notes<a name="outline"></a>
   * [Rachel Trombetta, GE Digital - ChefConf 2016 Keynote](https://www.youtube.com/watch?v=FUla4UHlZEM)
   * [Hugging in the Chef Community](https://github.com/chef/chef-rfc/blob/master/rfc061-hugs.md)
 * Upcoming Food Fight Show Episodes
-  * Sioux Chefs
-  * A3 Thinking
+  * [Sous Chefs](https://github.com/foodfight/showz/blob/master/scripts/episode-105-sous-chefs.md) - [Tuesday, January 24, 2017, 21:00 UTC](http://everytimezone.com/#2017-01-24,540,cn3)
+  * [A3 Thinking](https://github.com/foodfight/showz/blob/master/scripts/episode-xx-a3-thinking.md) - [Tuesday, February 28, 2017 20:00 UTC](http://everytimezone.com/#2017-2-28,480,cn3)
   * Live Show from [Microsoft Ignite](https://msftignite.com.au/)
   * [Config Management Camp](http://cfgmgmtcamp.eu/) Wrapup
   * [Terraform](https://www.terraform.io/)
@@ -85,7 +85,7 @@ Picks<a name="picks"></a>
 Download
 --------
 * [Video](http://youtu.be/Llo-DKBRAs4)
-* Audio - Coming Soon!
+* [Audio](http://traffic.libsyn.com/foodfight/FFS104.mp3)
 
 <hr />
 
