Prepare for episode 108
* Update A3 thinking
* Add episode 107
* Clean-up some earlier posts

Signed-off-by: Nathen Harvey <nharvey@chef.io>

--- a/source/_posts/2017-01-04-new-year.markdown
+++ b/source/_posts/2017-01-04-new-year.markdown
@@ -19,6 +19,8 @@ categories:
   * [Video](http://youtu.be/Llo-DKBRAs4)
   * [Audio](http://traffic.libsyn.com/foodfight/FFS104.mp3)
 
+<!-- more -->
+
 Panel<a name="panel"></a>
 -----
 
