--- a/source/_posts/2017-02-17-a3-thinking.markdown
+++ b/source/_posts/2017-02-17-a3-thinking.markdown
@@ -8,7 +8,10 @@ categories:
   - catswetel
 
 ---
-This episode will air on [Tuesday, February 28, 2017 at 20:00 UTC](http://everytimezone.com/#2017-2-28,480,cn3).
+
+# Watch Now
+
+<iframe width="420" height="315" src="http://www.youtube.com/embed/8tJ_0dZ152E" frameborder="0" allowfullscreen></iframe>
 
 Join the conversation in the \#foodfight channel of the [Chef Community Slack](http://community-slack.chef.io/).
 
