--- a/source/_posts/2017-02-17-a3-thinking.markdown
+++ b/source/_posts/2017-02-17-a3-thinking.markdown
@@ -18,7 +18,7 @@ categories:
 * [Picks](http://foodfightshow.org/2017/02/a3-thinking.html#picks)
 * Download
   * [Video](https://youtu.be/pXHmeNhlETE)
-  * Coming Soon!
+  * [Audio](http://traffic.libsyn.com/foodfight/FFS108.mp3)
 
 Panel<a name="panel"></a>
 -----
@@ -111,7 +111,7 @@ Download
 --------
 
 * [Video](https://youtu.be/pXHmeNhlETE)
-* Coming Soon!
+* [Audio](http://traffic.libsyn.com/foodfight/FFS108.mp3)
 
 <hr />
 
