--- a/source/_posts/2017-02-17-a3-thinking.markdown
+++ b/source/_posts/2017-02-17-a3-thinking.markdown
@@ -9,8 +9,6 @@ categories:
 
 ---
 
-# Watch Now
-
 <iframe width="420" height="315" src="http://www.youtube.com/embed/pXHmeNhlETE" frameborder="0" allowfullscreen></iframe>
 
 * [Panel](http://foodfightshow.org/2017/02/a3-thinking.html#panel)
@@ -19,6 +17,8 @@ categories:
 * Download
   * [Video](https://youtu.be/pXHmeNhlETE)
   * [Audio](http://traffic.libsyn.com/foodfight/FFS108.mp3)
+
+<!-- more -->
 
 Panel<a name="panel"></a>
 -----
