--- a/source/_posts/2018-07-23-sensu.markdown
+++ b/source/_posts/2018-07-23-sensu.markdown
@@ -6,6 +6,8 @@ comments: true
 categories: 
   - sensu
   - portertech
+  - mbbroberg
+  - jkerrydev
   - monitoring
   - habitat
   - observability
@@ -23,6 +25,8 @@ This episode will be broadcast and recorded on [Thursday, July 26, 2018 - 18:00 
 Panel<a name="panel"></a>
 -----
 * Sean Porter [twitter](https://twitter.com/portertech), [github](https://github.com/portertech)
+* John Kerry [twitter](https://twitter.com/jkerrydev), [github](https://github.com/jkerry)
+* Matt Broberg [github](https://github.com/mbbroberg), [twitter](https://twitter.com/mbbroberg)
 * Nathen Harvey [github](http://github.com/nathenharvey), [twitter](http://twitter.com/nathenharvey), [blog](http://nathenharvey.com)
 
 ## Show Notes
