--- a/source/_posts/2018-07-03-chefconf-2018.markdown
+++ b/source/_posts/2018-07-03-chefconf-2018.markdown
@@ -15,6 +15,8 @@ Nell and Nathen teamed up with Matty and Trevor from the [Arrested Devops podcas
 * [Panel](/2018/07/chefconf-2018.html#panel)
 * [Audio](http://traffic.libsyn.com/foodfight/FFS120.mp3)
 
+<!-- more -->
+
 Panel<a name="panel"></a>
 -----
 * Matty Stratton [github](https://github.com/mattstratton), [twitter](https://twitter.com/mattstratton)
